# bequeath.dev

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint-dev.sh  entrypoint.sh  pyproject.toml
.github/workflows/: release.yml
app/: settings.py  storage_backends.py  urls.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: index.html  post.html
fixtures/: blog_posts_fixture.json
portfolio/: models.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_alter_project_image.py  0003_alter_project_image.py
portfolio/templates/portfolio/: index.html  profile.html  project.html  projects.html
scripts/: load_fixtures.py
theme/static_src/: tailwind.config.js
theme/static_src/src/: styles.css
theme/templates/: base.html
