[tool.poetry]
name = "bequeath"
version = "0.1.0"
description = ""
authors = ["Clement MARCEL <lecramproject@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
