[tool.poetry]
name = "bequeath"
version = "0.1.0"
description = ""
authors = ["Clement MARCEL <lecramproject@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
dj-database-url = "^2.2.0"
psycopg = {extras = ["binary"], version = "^3.2.1"}
python-decouple = "^3.8"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
